# MxFirewall

./: INSTALL  LICENSE  MxFirewall.desktop  README.md  configure.ac
src/: MainWindow.cpp  MainWindow.h  Makefile.am  NftablesParser.cpp  NftablesParser.h  Structs.h  TableModelColumns.cpp  TableModelColumns.h  Utilites.cpp  Utilites.h  main.cpp
ui/: interface.ui
