AC_PREREQ([2.69])
AC_INIT([mxfirewall], [1.0])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
# Checks for libraries.
PKG_CHECK_MODULES([GTKMM], [gtkmm-3.0])
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
AC_PREFIX_DEFAULT(/usr/local)

